Actualizacion de version 27/dic/2018
se actualizo la version a la fecha de 27/dic/2018

--- a/Acceso_Museo/app.config
+++ b/Acceso_Museo/app.config
@@ -6,7 +6,7 @@
   <connectionStrings>
     <!--<add name="Gestor" connectionString="Data Source=SRV-CONTEL2\SQL2008;Initial Catalog=Museo_Momias_Punto_Venta;User ID=apl_desarrollo;Password=cntldes2010%" providerName="SqlClient"/>-->
     <!--<add name="Gestor" connectionString="Server=localhost;Database=Museo_Momias_Punto_Venta;Uid=apl_desarrollo;Pwd=cntldes2014%;AllowZeroDateTime=True;" providerName="MySqlClient"/>-->
-    <add name="Gestor" connectionString="Server=localhost;Database=museo_momias_punto_venta;Uid=apl_desarrollo;Pwd=cntldes2010%;AllowZeroDateTime=True;" providerName="MySqlClient"/>
+    <add name="Gestor" connectionString="Server=localhost;Database=momias;Uid=root;Pwd=Passw0rd;AllowZeroDateTime=True;" providerName="MySqlClient"/>
     <!--<add name="Gestor" connectionString="Server=192.168.0.2;Database=museo_momias_punto_venta;Uid=root;Pwd=Passw0rd;AllowZeroDateTime=True;" providerName="MySqlClient"/>-->
   </connectionStrings>
 </configuration>
