--- a/Acceso_Museo/app.config
+++ b/Acceso_Museo/app.config
@@ -1,12 +1,27 @@
 <?xml version="1.0"?>
 <configuration>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
   <connectionStrings>
     <!--<add name="Gestor" connectionString="Data Source=SRV-CONTEL2\SQL2008;Initial Catalog=Museo_Momias_Punto_Venta;User ID=apl_desarrollo;Password=cntldes2010%" providerName="SqlClient"/>-->
     <!--<add name="Gestor" connectionString="Server=localhost;Database=Museo_Momias_Punto_Venta;Uid=apl_desarrollo;Pwd=cntldes2014%;AllowZeroDateTime=True;" providerName="MySqlClient"/>-->
-    <add name="Gestor" connectionString="Server=localhost;Database=momias;Uid=root;Pwd=Passw0rd;AllowZeroDateTime=True;" providerName="MySqlClient"/>
+    <add name="Gestor" connectionString="Server=localhost;Database=momias;Uid=root;Pwd=Passw0rd;AllowZeroDateTime=True;" providerName="MySqlClient" />
     <!--<add name="Gestor" connectionString="Server=192.168.0.2;Database=museo_momias_punto_venta;Uid=root;Pwd=Passw0rd;AllowZeroDateTime=True;" providerName="MySqlClient"/>-->
   </connectionStrings>
+  <appSettings>
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
